--- a/nginx-gateway.conf
+++ b/nginx-gateway.conf
@@ -10,12 +10,21 @@ http {
             proxy_pass http://engine-metadata:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Authorization $http_authorization;
         }
 
         location /data {
             proxy_pass http://engine-execution:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Authorization $http_authorization;
+        }
+
+        location /auth/ {
+            proxy_pass http://auth-service:8000/api/v1/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header Authorization $http_authorization;
         }
     }
 }
