--- a/nginx-gateway.conf
+++ b/nginx-gateway.conf
@@ -6,22 +6,22 @@ http {
     server {
         listen 80;
 
-        location /schemas {
+        location /api/v1/schemas {
             proxy_pass http://engine-metadata:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
         }
 
-        location /data {
+        location /api/v1/data {
             proxy_pass http://engine-execution:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
         }
 
-        location /auth/ {
-            proxy_pass http://auth-service:8000/api/v1/auth/;
+        location /api/v1/auth {
+            proxy_pass http://auth-service:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header Authorization $http_authorization;
